# MyReception

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 3cbccadbba68_remove_task_relationship_from_user.py  44aa8d2cf155_initial_migration.py  52e468410437_remove_task_relationship_from_user.py  556367263336_initial_migration.py  965e98453ffd_initial_migration.py  adb7bd815196_remove_task_relationship_from_user.py  b02ab4e383e2_initial_migration.py  b8f8650aafd3_initial_migration.py  dac5e1e0f0f7_initial_migration.py  ed09f29dc7eb_initial_migration.py  f35348047724_initial_migration.py  f5464b8a181e_remove_task_relationship_from_user.py  ff7220278b74_remove_task_relationship_from_user.py
app/: deps.py  mail_service.py  main.py
app/api/: users.py
app/celery/: celery_app.py  celery_tasks.py
app/core/: celery_app.py  celery_tasks.py  config.py  database.py  security.py
app/crud/: users.py
app/logs/: __init__.py  config.py  logger.py
app/models/: __init__.py  business_card.py  users.py
app/notifications/: notification_sender_service.py
app/schemas/: business_card.py  tasks.py  users.py
app/services/: dependencies.py  profile_service.py  token_service.py  user_service.py
teleport_webrtc/: mail_service.py  main.py  sms_service.py
teleport_webrtc/api/: __init__.py  tasks.py  users.py
teleport_webrtc/core/: config.py  database.py
teleport_webrtc/crud/: tasks.py  users.py
teleport_webrtc/models/: __init__.py  tasks.py  users.py
tests/: conftest.py  test_auth.py  test_mail.py  test_tasks.py  test_user_routes.py
(+24 files in other folders)
