[tool.poetry]
name = "MyReception"
version = "0.1.0"
description = ""
authors = ["Aliaksei Saukin <88047550+SaxleS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
databases = "^0.9.0"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.2"
phonenumbers = "^8.13.44"
asyncpg = "^0.29.0"
jose = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
twilio = "^9.2.4"
greenlet = "^3.0.3"
cryptography = "^41.0.3"
bcrypt = "^4.2.0"
psycopg2-binary = "^2.9.9"
fastapi-mail = "^1.4.1"
fastapi-jwt = "^0.3.0"
pytest = "^8.3.3"
websockets = "^13.1"
celery = "^5.4.0"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
